<resources>
    <string name="app_name">SAFER</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Login</string>
    <string name="create_account_link">No account yet? Create one</string>
    <string name="name_hint">Name</string>
    <string name="btn_create_account">Create Account</string>
    <string name="login_link">Already a member? Login</string>
    <string name="phone_hint">Phone</string>
    <string name="facebook_app_id">825616740947324</string>
</resources>
