<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <TextView android:text="@string/app_name"
                  android:layout_width="wrap_content"
                  android:layout_height="72dp"
                  android:textSize="40sp"
                  android:id="@+id/app_banner"
                  android:layout_marginBottom="24dp"
                  android:layout_gravity="center_horizontal"/>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.tuannguyen.framework.validation.ValidateEditText android:id="@+id/input_name"
                                                                  android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:inputType="textCapWords"
                                                                  android:hint="@string/name_hint"
                                                                  app:controlName="Name"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.tuannguyen.framework.validation.ValidateEditText android:id="@+id/input_phone"
                                                                  android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:inputType="phone"
                                                                  android:hint="@string/phone_hint"
                                                                  app:controlName="Phone"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.tuannguyen.framework.validation.ValidateEditText android:id="@+id/input_email"
                                                                  android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:inputType="textEmailAddress"
                                                                  android:hint="@string/email_hint"
                                                                  app:controlName="Email"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <com.tuannguyen.framework.validation.ValidateEditText android:id="@+id/input_password"
                                                                  android:layout_width="match_parent"
                                                                  android:layout_height="wrap_content"
                                                                  android:inputType="textPassword"
                                                                  app:controlName="password"
                                                                  android:hint="@string/password_hint"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/btn_create_account"/>

        <TextView android:id="@+id/link_login"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/login_link"
                  android:gravity="center"
                  android:textSize="16sp"/>

    </LinearLayout>
</ScrollView>